syntax = "proto3";

package valid_code;

enum ValidCodeKind {
    Register = 0;
    ResetPassword = 1;
}
message ValidCode {
    string code = 1;
    ValidCodeKind kind = 2;
    string email = 3;
}